Added a page for products

--- a/template.html
+++ b/template.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">Speedy Cleaners</a></li>
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact Us</a></li>
+            <li><a href="products.html">Products We Use</a></li>
         </ul>
     </nav>
     <main>
