--- a/about_us.html
+++ b/about_us.html
@@ -16,10 +16,11 @@
             <li><a href="index.html">Speedy Cleaners</a></li>
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact Us</a></li>
+            <li><a href="products.html">Products We Use</a></li>
         </ul>
     </nav>
     <main>
-<p>about us</p>
+        <p>about us</p>
     </main>
     <footer>
 
