--- a/contact_us.html
+++ b/contact_us.html
@@ -17,6 +17,7 @@
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact Us</a></li>
             <li><a href="products.html">Products We Use</a></li>
+            <li><a href="cleaning_estimate.html">Get a cleaning estimate</a></li>
         </ul>
     </nav>
     <main>
